A lot of changes!
ADDED: Fully integration of Minecraft login. Mineshafter login has been
delayed for now.
CHANGED: Play() method to integrate Minecraft login.
CHANGED: Non Minecraft user account execution system. Now, doesnt
require any external file to read.
DELAYED: Systray. A lot of bugs to fix for now.
FIXED: A little bug which causes to not open Minecraft.